CKAD/esercizi_ckad/networkpolicy/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ckad-frontend
  labels:
    role: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: ckad-backend
  labels:
    role: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: ckad-db
  labels:
    role: db
